@@ -2,17 +2,20 @@ package com.getpcpanel.cpp.linux;
 
 import java.io.IOException;
 import java.nio.charset.Charset;
+import java.util.Objects;
+import java.util.Optional;
 
 import javax.annotation.Nullable;
 
 import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.math.NumberUtils;
 import org.springframework.stereotype.Service;
 
+import com.getpcpanel.MainFX;
 import com.getpcpanel.spring.ConditionalOnLinux;
 import com.getpcpanel.util.ProcessHelper;
 
+import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 
@@ -28,16 +31,21 @@ public class LinuxProcessHelper {
     }
 
     public int getActiveProcessPid() {
-        try {
-            var activeWindow = lineFrom("xdotool", "getactivewindow");
-            if (StringUtils.isBlank(activeWindow)) {
-                return -1;
+        return getActiveProcessPid(Tool.KDoTool)
+                .or(() -> getActiveProcessPid(Tool.XDoTool))
+                .orElse(-1);
+    }
+
+    private Optional<Integer> getActiveProcessPid(Tool tool) {
+        if (tool.available()) {
+            try {
+                var line = lineFrom(tool.command, "getactivewindow", "getwindowpid");
+                return Optional.of(NumberUtils.toInt(line, -1)).filter(v -> v != -1);
+            } catch (Exception e) {
+                log.error("Unable to run process", e);
             }
-            return NumberUtils.toInt(lineFrom("xdotool", "getwindowpid", activeWindow), -1);
-        } catch (Exception e) {
-            log.error("Unable to run process", e);
         }
-        return -1;
+        return Optional.empty();
     }
 
     public @Nullable String getActiveProcess() {
@@ -57,6 +65,32 @@ public class LinuxProcessHelper {
         if (lines.isEmpty()) {
             return null;
         }
-        return lines.get(0);
+        return lines.getFirst();
+    }
+
+    @Getter
+    private enum Tool {
+        XDoTool("xdotool"),
+        KDoTool("kdotool");
+
+        private final String command;
+        private final boolean available;
+
+        Tool(String tool) {
+            command = resolveHomeRelativePath(Objects.requireNonNullElse(MainFX.getContext().getEnvironment().getProperty("linux.commands." + tool), tool));
+            available = ProcessConditionalHelper.isProcessAvailable(command);
+            log.info("Active Window tool {} enabled: {}", tool, available);
+        }
+
+        private static String resolveHomeRelativePath(String process) {
+            var userHome = System.getProperty("user.home");
+            if ("~".equals(process)) {
+                return userHome;
+            }
+            if (process.startsWith("~/")) {
+                return userHome + process.substring(1);
+            }
+            return process;
+        }
     }
 }
